--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -252,6 +252,13 @@ h3{
     }
 }
 
+#shapeArea{
+    margin: px(10) 0;
+    span{
+        display: inline-block;
+    }
+}
+
 @media all and(max-width: 700px){
     html{
         font-size: 4vw;
