--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -62,6 +62,16 @@ h2{
     font-size: px(14);
 }
 
+button{
+    padding: px(7) px(14);
+    border: 0;
+    font-size: px(14);
+    &.btn_color_01{
+        background: rgb(119, 184, 221);
+        color: #fff;
+    }
+}
+
 .header{
     position: fixed;
     left: 0;
@@ -174,6 +184,7 @@ ul.nav{
     background: $color1;
     transition-duration: .3s;
     line-height: 0;
+    z-index: 999;
     li{
         width: 100%;
         a{
@@ -251,16 +262,78 @@ h3{
         }
     }
 }
-
+.shapeStore, #shapeArea{
+    display: inline-block;
+    height: px(600);
+    vertical-align: middle;
+}
+#shapeArea{
+    position: relative;
+    width: calc(100% - calc(500rem / 19.20));
+    border: px(1) solid #bbb;
+    *{
+        position: absolute;
+        cursor: pointer;
+    }
+}
+.shapeStore{
+    width: px(500);
+    padding-right: px(30);
+    .shapeSet{
+        &+.shapeSet{
+            margin-top: px(10);
+        }
+        label{
+            display: inline-block;
+            width: px(100);
+        }
+        input{
+            width: calc(100% - (100rem / 19.20));
+            height: px(32);
+            padding: 0 px(10);
+            border: px(1) solid #bbb;
+            font-size: px(14);
+        }
+    }
+    .shapeCreateBtns{
+        margin-top: px(10);
+        button{
+            width: calc(100% / 3 - (8rem / 19.20));
+            font-size: px(12);
+            +button{
+                margin-left: px(12);
+            }
+        }
+    }
+    ul.shapeInfo{
+        margin-top: px(10);
+        li{
+            line-height: 1.2;
+            &+li{
+                margin-top: px(10);
+            }
+        }
+    }
+}
 #shapeArea{
     margin: px(10) 0;
     span{
         display: inline-block;
     }
+    #tooltip{
+        padding: px(10);
+        background: rgba(0,0,0,.5);
+        color: #fff;
+    }
 }
+
 
 @media all and(max-width: 700px){
     html{
         font-size: 4vw;
+    }
+    .shapeStore, #shapeArea{
+        width: 100%;
+        padding: 0;
     }
 }
