--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -66,6 +66,7 @@ button{
     padding: px(7) px(14);
     border: 0;
     font-size: px(14);
+    cursor: pointer;
     &.btn_color_01{
         background: rgb(119, 184, 221);
         color: #fff;
@@ -82,6 +83,7 @@ button{
     line-height: px(50);
     background: $color3;
     padding: 0 px(30);
+    z-index: 9999;
     h1{
         display: table-cell;
         a{
@@ -262,6 +264,10 @@ h3{
         }
     }
 }
+
+.userDragNone{
+    user-select: none;
+}
 .shapeStore, #shapeArea{
     display: inline-block;
     height: px(600);
@@ -286,13 +292,19 @@ h3{
         label{
             display: inline-block;
             width: px(100);
+            height: px(32);
+            line-height: px(32);
+            vertical-align: middle;
         }
         input{
             width: calc(100% - (100rem / 19.20));
             height: px(32);
-            padding: 0 px(10);
             border: px(1) solid #bbb;
             font-size: px(14);
+            vertical-align: middle;
+            &[type=number]{
+                padding: 0 px(10);
+            }
         }
     }
     .shapeCreateBtns{
@@ -317,14 +329,18 @@ h3{
 }
 #shapeArea{
     margin: px(10) 0;
+    overflow: hidden;
     span{
         display: inline-block;
     }
-    #tooltip{
-        padding: px(10);
-        background: rgba(0,0,0,.5);
-        color: #fff;
-    }
+}
+#tooltip{
+    position: fixed;
+    display: inline-block;
+    padding: px(10);
+    background: rgba(0,0,0,.5);
+    color: #fff;
+    line-height: 1.5;
 }
 
 
