--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -36,6 +36,7 @@ html{
     body{
         width: 100%;
         height: 100%;
+        overflow: hidden;
     }
     #root{
         position: fixed;
@@ -47,7 +48,7 @@ html{
 }
 
 h2{
-    display: inlin-block;
+    display: inline-block;
     width: 100%;
     height: px(40);
     line-height: px(40);
@@ -129,8 +130,11 @@ button{
             &:checked ~ .nav{
                 right: 0;
             }
+            &:checked ~ .mask{
+                display: inline-block;
+            }
         }
-        label{
+        .ham{
             display: inline-block;
             width: px(30);
             height: px(22.5);
@@ -174,6 +178,17 @@ button{
             }
         }
     }
+}
+
+.mask{
+    display: none;
+    position: fixed;
+    left: 0;
+    top: px(50);
+    width: 100%;
+    height: calc(100% - (50rem / 19.20));
+    z-index: 998;
+    background: rgba(0,0,0,.5);
 }
 
 ul.nav{
@@ -351,5 +366,8 @@ h3{
     .shapeStore, #shapeArea{
         width: 100%;
         padding: 0;
+    }
+    .shapeStore{
+        height: auto;
     }
 }
