--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -304,7 +304,7 @@ h3{
         &+.shapeSet{
             margin-top: px(10);
         }
-        label{
+        label, span{
             display: inline-block;
             width: px(100);
             height: px(32);
@@ -312,12 +312,13 @@ h3{
             vertical-align: middle;
         }
         input{
-            width: calc(100% - (100rem / 19.20));
+            width: calc(100% - (200rem / 19.20));
             height: px(32);
             border: px(1) solid #bbb;
             font-size: px(14);
             vertical-align: middle;
             &[type=number]{
+                width: calc(100% - (100rem / 19.20));
                 padding: 0 px(10);
             }
         }
