--- a/src/css/index.css
+++ b/src/css/index.css
@@ -257,9 +257,42 @@ ul.nav_second li a {
 }
 
 h3 {
-  font-family: "notoSansMedium";
+  font-family: "notoSansBold";
   font-size: 0.83333rem;
   margin-bottom: 0.52083rem;
+}
+
+.table_wrapper {
+  display: inline-block;
+  width: 100%;
+  height: 26.04167rem;
+  overflow: auto;
+}
+
+.table_type_01 {
+  min-width: 96.875rem;
+  table-layout: auto;
+  text-align: center;
+}
+
+.table_type_01 caption {
+  text-align: left;
+  font-family: "notoSansMedium";
+  font-size: 0.72917rem;
+  margin-bottom: 0.52083rem;
+}
+
+.table_type_01 tr + tr {
+  border-top: 0.05208rem solid #ddd;
+}
+
+.table_type_01 tr th, .table_type_01 tr td {
+  padding: 0.52083rem;
+}
+
+.table_type_01 thead tr th {
+  background: #999;
+  color: #fff;
 }
 
 .wrapper_counter span {
