--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -250,13 +250,51 @@ ul.nav_second{
 }
 
 h3{
-    font-family: $notoM;
+    font-family: $notoB;
     font-size: px(16);
     margin-bottom: px(10);
 }
 
-.wrapper_tool{
+.table_wrapper{
+    display: inline-block;
+    width: 100%;
+    height: px(500);
+    overflow: auto;
+}
 
+.table_type_01{
+    min-width: px(1860);
+    table-layout: auto;
+    text-align: center;
+    caption{
+        text-align: left;
+        font-family: $notoM;
+        font-size: px(14);
+        margin-bottom: px(10);
+    }
+    tr{
+        +tr{
+            border-top: px(1) solid #ddd;
+        }
+        th, td{
+            padding: px(10);
+        }
+    }
+    thead{
+        tr{
+            th{
+                background: #999;
+                color: #fff;
+            }
+        }
+    }
+    tbody{
+        tr{
+            td{
+
+            }
+        }
+    }
 }
 
 .wrapper_counter{
