--- a/src/css/index.css
+++ b/src/css/index.css
@@ -265,7 +265,6 @@ h3 {
 .table_wrapper {
   display: inline-block;
   width: 100%;
-  height: 26.04167rem;
   overflow: auto;
 }
 
@@ -273,6 +272,7 @@ h3 {
   min-width: 96.875rem;
   table-layout: auto;
   text-align: center;
+  font-size: 0.625rem;
 }
 
 .table_type_01 caption {
