--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -267,7 +267,7 @@ h3{
 
 .table_type_01{
     min-width: px(1860);
-    table-layout: auto;
+    table-layout: fixed;
     text-align: center;
     font-family: $notoR;
     tr{
