--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -268,7 +268,7 @@ h3{
 .table_type_01{
     min-width: px(1860);
     table-layout: auto;
-    text-align: center;
+    text-align: left;
     font-family: $notoR;
     tr{
         +tr{
