--- a/src/css/index.css
+++ b/src/css/index.css
@@ -273,9 +273,9 @@ h3 {
 }
 
 .table_type_01 {
-  min-width: 96.875rem;
+  width: 96.875rem;
   table-layout: auto;
-  text-align: left;
+  text-align: center;
   font-family: "notoSansRegular";
 }
 
