--- a/src/css/index.css
+++ b/src/css/index.css
@@ -291,6 +291,7 @@ h3 {
   overflow: hidden;
   text-overflow: ellipsis;
   word-break: break-all;
+  line-height: 1.5;
 }
 
 .table_type_01 thead tr th {
