--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -282,6 +282,7 @@ h3{
             overflow: hidden;
             text-overflow: ellipsis;
             word-break: break-all;
+            line-height: 1.5;
         }
     }
     thead{
