--- a/src/css/index.css
+++ b/src/css/index.css
@@ -266,6 +266,36 @@ h3 {
   margin-bottom: 0.52083rem;
 }
 
+@-webkit-keyframes bounce {
+  0% {
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+  }
+  50% {
+    -webkit-transform: translate(-50%, -50%) scale(1.1);
+            transform: translate(-50%, -50%) scale(1.1);
+  }
+  100% {
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+  }
+}
+
+@keyframes bounce {
+  0% {
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+  }
+  50% {
+    -webkit-transform: translate(-50%, -50%) scale(1.1);
+            transform: translate(-50%, -50%) scale(1.1);
+  }
+  100% {
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+  }
+}
+
 .table_wrapper {
   display: inline-block;
   width: 100%;
@@ -274,26 +304,23 @@ h3 {
 }
 
 .table_wrapper .notice_table_scroll {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  text-align: center;
-  background: rgba(0, 0, 0, 0.5);
-  color: #fff;
-  opacity: 1;
-}
-
-.table_wrapper .notice_table_scroll span {
   position: absolute;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  font-family: "notoSansMedium";
   font-size: 0.625rem;
   vertical-align: middle;
+  color: #fff;
+  z-index: 1;
+  -webkit-transition-duration: .3s;
+          transition-duration: .3s;
+  -webkit-animation: bounce 2s linear infinite;
+          animation: bounce 2s linear infinite;
 }
 
-.table_wrapper .notice_table_scroll span::before, .table_wrapper .notice_table_scroll span::after {
+.table_wrapper .notice_table_scroll::before, .table_wrapper .notice_table_scroll::after {
   content: "";
   display: inline-block;
   width: 0.625rem;
@@ -303,13 +330,13 @@ h3 {
   vertical-align: middle;
 }
 
-.table_wrapper .notice_table_scroll span::before {
+.table_wrapper .notice_table_scroll::before {
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
   margin-right: 0.52083rem;
 }
 
-.table_wrapper .notice_table_scroll span::after {
+.table_wrapper .notice_table_scroll::after {
   -webkit-transform: rotate(-90deg);
           transform: rotate(-90deg);
   margin-left: 0.52083rem;
@@ -320,6 +347,19 @@ h3 {
   table-layout: auto;
   text-align: center;
   font-family: "notoSansRegular";
+  position: relative;
+}
+
+.table_type_01 .notice_bg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  opacity: 1;
+  -webkit-transition-duration: .3s;
+          transition-duration: .3s;
 }
 
 .table_type_01 tr + tr {
