--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -259,44 +259,51 @@ h3{
     margin-bottom: px(10);
 }
 
+@keyframes bounce {
+    0%{
+        transform: translate(-50%,-50%) scale(1);
+    }
+    50%{
+        transform: translate(-50%,-50%) scale(1.1);
+    }
+    100%{
+        transform: translate(-50%,-50%) scale(1);
+    }
+}
+
 .table_wrapper{
     display: inline-block;
     width: 100%;
     overflow: auto;
     position: relative;
     .notice_table_scroll{
-        width: 100%;
-        height: 100%;
         position: absolute;
-        text-align: center;
-        background: rgba(0,0,0,.5);
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+        font-family: $notoM;
+        font-size: px(12);
+        vertical-align: middle;
         color: #fff;
-        opacity: 1;
-        span{
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%,-50%);
-            font-size: px(12);
+        z-index: 1;
+        transition-duration: .3s;
+        animation: bounce 2s linear infinite;
+        &::before, &::after{
+            content: "";
+            display: inline-block;
+            width: px(12);
+            height: px(12);
+            background: arrowDown(fff);
+            background-size: 100%;
             vertical-align: middle;
-            &::before, &::after{
-                content: "";
-                display: inline-block;
-                width: px(12);
-                height: px(12);
-                background: arrowDown(fff);
-                background-size: 100%;
-                vertical-align: middle;
-            }
-            &::before{
-                transform: rotate(90deg);
-                margin-right: px(10);
-            }
-            &::after{
-                transform: rotate(-90deg);
-                margin-left: px(10);
-            }
-
+        }
+        &::before{
+            transform: rotate(90deg);
+            margin-right: px(10);
+        }
+        &::after{
+            transform: rotate(-90deg);
+            margin-left: px(10);
         }
     }
 }
@@ -307,6 +314,17 @@ h3{
     table-layout: auto;
     text-align: center;
     font-family: $notoR;
+    position: relative;
+    .notice_bg{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        text-align: center;
+        background: rgba(0,0,0,.7);
+        color: #fff;
+        opacity: 1;
+        transition-duration: .3s;
+    }
     tr{
         +tr{
             border-top: px(1) solid #ddd;
