--- a/src/css/index.css
+++ b/src/css/index.css
@@ -268,31 +268,25 @@ h3 {
 
 @-webkit-keyframes bounce {
   0% {
-    -webkit-transform: translate(-50%, -50%) scale(1);
-            transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
   }
   50% {
-    -webkit-transform: translate(-50%, -50%) scale(1.1);
-            transform: translate(-50%, -50%) scale(1.1);
+    opacity: 0.2;
   }
   100% {
-    -webkit-transform: translate(-50%, -50%) scale(1);
-            transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
   }
 }
 
 @keyframes bounce {
   0% {
-    -webkit-transform: translate(-50%, -50%) scale(1);
-            transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
   }
   50% {
-    -webkit-transform: translate(-50%, -50%) scale(1.1);
-            transform: translate(-50%, -50%) scale(1.1);
+    opacity: 0.2;
   }
   100% {
-    -webkit-transform: translate(-50%, -50%) scale(1);
-            transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
   }
 }
 
@@ -311,7 +305,6 @@ h3 {
           transform: translate(-50%, -50%);
   font-family: "notoSansMedium";
   font-size: 0.625rem;
-  vertical-align: middle;
   color: #fff;
   z-index: 1;
   -webkit-transition-duration: .3s;
@@ -323,11 +316,11 @@ h3 {
 .table_wrapper .notice_table_scroll::before, .table_wrapper .notice_table_scroll::after {
   content: "";
   display: inline-block;
-  width: 0.625rem;
-  height: 0.625rem;
+  width: 0.83333rem;
+  height: 0.83333rem;
   background: url('data:image/svg+xml;utf8,<svg viewBox="0 0 140 140" width="24" height="24" xmlns="http://www.w3.org/2000/svg"><g><path d="m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z" stroke="%23fff" stroke-linejoin="round" stroke-width="6" fill="%23fff"/></g></svg>');
   background-size: 100%;
-  vertical-align: middle;
+  vertical-align: text-bottom;
 }
 
 .table_wrapper .notice_table_scroll::before {
