--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -276,6 +276,7 @@ h3{
     width: 100%;
     overflow: auto;
     position: relative;
+    // border-bottom: px(2) solid #999;
     .notice_table_scroll{
         position: absolute;
         left: 50%;
@@ -319,7 +320,7 @@ h3{
         height: 100%;
         position: absolute;
         text-align: center;
-        background: rgba(0,0,0,.7);
+        background: rgba(0,0,0,.6);
         color: #fff;
         opacity: 1;
         transition-duration: .3s;
