--- a/src/css/var.scss
+++ b/src/css/var.scss
@@ -8,12 +8,13 @@ $notoR: 'notoSansRegular';
 $notoM: 'notoSansMedium';
 $notoB: 'notoSansBold';
 
-$color1: #42424A;
-$color2: #8B8F9C;
-$color3: #C9CACD;
+$color1: #8c9ba5;
+$color2: #5596e6;
+$color3: #3d70b2;
 $color4: #3F7CA5;
 $color5: #7FA6C9;
 $color6: #DE5867;
+$color7: #41d6c3;
 // $gray1: #71797c;
 
 /* s : 아이콘 공통 */
