--- a/src/css/index.css
+++ b/src/css/index.css
@@ -50,11 +50,14 @@ html #root {
   width: 100%;
   height: 100%;
   overflow: auto;
-  padding-top: 2.60417rem;
+  padding-top: 4.6875rem;
   background-color: #f4f4f4;
 }
 
 h2 {
+  position: fixed;
+  top: 2.60417rem;
+  left: 0;
   display: inline-block;
   width: 100%;
   height: 2.08333rem;
@@ -78,7 +81,7 @@ button {
 }
 
 button.btn_color_01 {
-  background: #77b8dd;
+  background: #8c9ba5;
   color: #f5f5f5;
 }
 
