--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -48,12 +48,15 @@ html{
         width: 100%;
         height: 100%;
         overflow: auto;
-        padding-top: px(50);
+        padding-top: px(90);
         background-color: #f4f4f4;
     }
 }
 
 h2{
+    position: fixed;
+    top: px(50);
+    left: 0;
     display: inline-block;
     width: 100%;
     height: px(40);
@@ -75,7 +78,7 @@ button{
     font-size: px(14);
     cursor: pointer;
     &.btn_color_01{
-        background: rgb(119, 184, 221);
+        background: $color1;
         color: #f5f5f5;
     }
 }
