--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -38,6 +38,7 @@ html{
     height: 100%;
     font-family: $notoR;
     color: #444;
+    user-select: none;
     body{
         width: 100%;
         height: 100%;
@@ -492,6 +493,6 @@ h3{
         height: auto;
     }
     #shapeArea{
-        height: px(300);
+        height: px(400);
     }
 }
