--- a/src/css/index.css
+++ b/src/css/index.css
@@ -75,6 +75,7 @@ h2 {
   color: #f5f5f5;
   font-family: "notoSansMedium";
   font-size: 0.72917rem;
+  z-index: 999;
 }
 
 button {
@@ -87,6 +88,23 @@ button {
 button.btn_color_01 {
   background: #8c9ba5;
   color: #f5f5f5;
+}
+
+.btn_fixed_bottom {
+  display: inline-block;
+  position: fixed;
+  bottom: 1.5625rem;
+  right: 1.04167rem;
+  width: 3.125rem;
+  height: 3.125rem;
+  background: #5596e6;
+  border-radius: 100%;
+  z-index: 1;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  -webkit-transition-duration: .3s;
+          transition-duration: .3s;
 }
 
 input {
@@ -418,17 +436,12 @@ h3 {
   background: #3F7CA5;
 }
 
-.userDragNone {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
 .shapeStore, #shapeArea {
   display: inline-block;
   height: 31.25rem;
   vertical-align: middle;
+  -webkit-transition-duration: .3s;
+          transition-duration: .3s;
 }
 
 #shapeArea {
@@ -460,9 +473,6 @@ h3 {
 }
 
 .shapeStore .shapeSet input {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
   width: calc(100% - (200rem / 19.20));
   height: 1.66667rem;
   border: 0.05208rem solid #bbb;
@@ -471,6 +481,9 @@ h3 {
 }
 
 .shapeStore .shapeSet input[type=number] {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   width: calc(100% - (100rem / 19.20));
   padding: 0 0.52083rem;
 }
@@ -522,23 +535,65 @@ h3 {
   line-height: 1.5;
 }
 
+#trigger_shapeStore {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  display: inline-block;
+  padding: 0.52083rem 1.04167rem;
+  position: fixed;
+  bottom: 1.04167rem;
+  right: 1.04167rem;
+  border-radius: 0.3125rem;
+  color: #fff;
+  background: #3F7CA5;
+  z-index: 1;
+}
+
+#trigger_shapeStore::before {
+  content: "Open ShapeStore";
+}
+
+#trigger_shapeStore:checked {
+  background: #8c9ba5;
+}
+
+#trigger_shapeStore:checked + .shapeStore {
+  top: 4.6875rem;
+}
+
+#trigger_shapeStore:checked::before {
+  content: "Close ShapeStore";
+}
+
 @media all and (max-width: 700px) {
   html {
     font-size: 4vw;
+  }
+  #root > div, #root .wrapper_contents, #root .wrapper_shapeMaker {
+    height: 100%;
   }
   .shapeStore, #shapeArea {
     width: 100%;
     padding: 0;
   }
   .shapeStore {
+    position: fixed;
     height: auto;
+    left: 0;
+    top: calc(-300rem / 19.20);
+    padding: 1.5625rem;
+    background: #fff;
+    z-index: 1;
   }
-  #shapeArea {
-    height: 20.83333rem;
+  #shapeSheet, #shapeArea {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    margin: 0;
   }
   #tooltip {
-    position: static;
-    width: 100%;
+    display: none;
   }
 }
 /*# sourceMappingURL=index.css.map */
