--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -71,6 +71,7 @@ h2{
     color: #f5f5f5;
     font-family: $notoM;
     font-size: px(14);
+    z-index: 999;
 }
 
 button{
@@ -82,6 +83,20 @@ button{
         background: $color1;
         color: #f5f5f5;
     }
+}
+
+.btn_fixed_bottom{
+    display: inline-block;
+    position: fixed;
+    bottom: px(30);
+    right: px(20);
+    width: px(60);
+    height: px(60);
+    background: $color2;
+    border-radius: 100%;
+    z-index: 1;
+    appearance: none;
+    transition-duration: .3s;
 }
 
 input{
@@ -397,13 +412,11 @@ h3{
     }
 }
 
-.userDragNone{
-    user-select: none;
-}
 .shapeStore, #shapeArea{
     display: inline-block;
     height: px(600);
     vertical-align: middle;
+    transition-duration: .3s;
 }
 #shapeArea{
     position: relative;
@@ -429,13 +442,13 @@ h3{
             vertical-align: middle;
         }
         input{
-            appearance: none;
             width: calc(100% - (200rem / 19.20));
             height: px(32);
             border: px(1) solid #bbb;
             font-size: px(14);
             vertical-align: middle;
             &[type=number]{
+                appearance: none;
                 width: calc(100% - (100rem / 19.20));
                 padding: 0 px(10);
             }
@@ -479,24 +492,60 @@ h3{
     color: #f5f5f5;
     line-height: 1.5;
 }
-
+#trigger_shapeStore{
+    appearance: none;
+    display: inline-block;
+    padding: px(10) px(20);
+    position: fixed;
+    bottom: px(20);
+    right: px(20);
+    border-radius: px(6);
+    color: #fff;
+    background: $color4;
+    z-index: 1;
+    &::before{
+        content: "Open ShapeStore";
+    }
+    &:checked{
+        background: $color1;
+        &+.shapeStore{
+            top: px(90);
+        }
+        &::before{
+            content: "Close ShapeStore";
+        }
+    }
+}
 
 @media all and(max-width: 700px){
     html{
         font-size: 4vw;
+    }
+    #root{
+        >div, .wrapper_contents, .wrapper_shapeMaker{
+            height: 100%;
+        }
     }
     .shapeStore, #shapeArea{
         width: 100%;
         padding: 0;
     }
     .shapeStore{
+        position: fixed;
         height: auto;
+        left: 0;
+        top: calc(-300rem / 19.20);
+        padding: px(30);
+        background: #fff;
+        z-index: 1;
     }
-    #shapeArea{
-        height: px(400);
+    #shapeSheet,#shapeArea{
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        margin: 0;
     }
     #tooltip{
-        position: static;
-        width: 100%;
+        display: none;
     }
 }
