--- a/src/css/index.css
+++ b/src/css/index.css
@@ -539,19 +539,26 @@ h3 {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  display: inline-block;
-  padding: 0.52083rem 1.04167rem;
+  display: none;
+  width: 100%;
+  height: 2.60417rem;
   position: fixed;
-  bottom: 1.04167rem;
-  right: 1.04167rem;
-  border-radius: 0.3125rem;
-  color: #fff;
+  bottom: 0;
+  right: 0;
   background: #3F7CA5;
+  font-family: "notoSansMedium";
+  font-size: 0.72917rem;
+  color: #fff;
   z-index: 1;
 }
 
 #trigger_shapeStore::before {
   content: "Open ShapeStore";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 #trigger_shapeStore:checked {
@@ -570,7 +577,7 @@ h3 {
   html {
     font-size: 4vw;
   }
-  #root > div, #root .wrapper_contents, #root .wrapper_shapeMaker {
+  #root > div, #root .wrapper_contents {
     height: 100%;
   }
   .shapeStore, #shapeArea {
@@ -586,6 +593,9 @@ h3 {
     background: #fff;
     z-index: 1;
   }
+  .wrapper_shapeMaker {
+    height: calc(100% - (50rem / 19.20));
+  }
   #shapeSheet, #shapeArea {
     display: inline-block;
     width: 100%;
@@ -594,6 +604,9 @@ h3 {
   }
   #tooltip {
     display: none;
+  }
+  #trigger_shapeStore {
+    display: inline-block;
   }
 }
 /*# sourceMappingURL=index.css.map */
