--- a/src/css/index.css
+++ b/src/css/index.css
@@ -548,6 +548,8 @@ h3 {
   background: #3F7CA5;
   font-family: "notoSansMedium";
   font-size: 0.72917rem;
+  border: 0;
+  border-radius: 0;
   color: #fff;
   z-index: 1;
 }
