--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -503,6 +503,8 @@ h3{
     background: $color4;
     font-family: $notoM;
     font-size: px(14);
+    border: 0;
+    border-radius: 0;
     color: #fff;
     z-index: 1;
     &::before{
