--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -83,6 +83,14 @@ button{
         background: $color1;
         color: #f5f5f5;
     }
+    &.btn_color_02{
+        background: $color5;
+        color: #f5f5f5;
+    }
+    &.btn_color_03{
+        background: $color6;
+        color: #f5f5f5;
+    }
 }
 
 .btn_fixed_bottom{
