--- a/src/css/index.css
+++ b/src/css/index.css
@@ -264,7 +264,7 @@ ul.nav li a {
 }
 
 ul.nav li a:hover {
-  color: #41d6c3;
+  color: #DE5867;
 }
 
 ul.nav li a.on {
@@ -504,15 +504,10 @@ h3 {
 
 .shapeStore .shapeCreateBtns button {
   width: calc(100% / 3 - (8rem / 19.20));
-  margin-top: 0.625rem;
   font-size: 0.625rem;
   margin-left: 0.625rem;
   margin-bottom: 0.625rem;
   white-space: nowrap;
-}
-
-.shapeStore .shapeCreateBtns button:nth-child(3n + 1) {
-  margin-left: 0;
 }
 
 .shapeStore .shapeCreateBtns button:nth-child(3n + 1) {
