--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -543,6 +543,7 @@ h3{
 
 .guestBook{
     margin-top: px(20);
+    overflow: hidden;
     span{
         display: inline-block;
         width: 60%;
