--- a/src/css/index.css
+++ b/src/css/index.css
@@ -599,19 +599,29 @@ h3 {
   overflow: hidden;
 }
 
-.guestBook span {
+.guestBook > div {
   display: inline-block;
-  width: 60%;
+  width: 100%;
+}
+
+.guestBook > div span {
+  display: inline-block;
+  width: 80%;
+  max-width: 26.04167rem;
   padding: 1.04167rem;
   border-radius: 0.52083rem;
   background: #bbb;
   margin-bottom: 0.52083rem;
 }
 
-.guestBook span.mine {
+.guestBook > div.mine {
+  text-align: right;
+}
+
+.guestBook > div.mine span {
+  text-align: left;
   background: #444;
   color: #fff;
-  float: right;
 }
 
 @media all and (max-width: 700px) {
